@@ -11,6 +11,7 @@ PS: In the standard Python distribution, this file is encoded in Latin-1.
 
 David Abrahams
 Jim Ahlstrom
+Farhan Ahmad
 Jyrki Alakuijala
 Billy G. Allie
 Kevin Altis
@@ -28,6 +29,7 @@ Jan-Hein B"uhrman
 Donovan Baarda
 Attila Babo
 Alfonso Baciero
+Marcin Bachry
 Dwayne Bailey
 Stig Bakken
 Greg Ball
