@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4066: smtplib.SMTP_SSL._get_socket now correctly returns the socket.
+  Patch by Farhan Ahmad, test by Marcin Bachry.
+
 - Issue #2116: Weak references and weak dictionaries now support copy()ing and
   deepcopy()ing.
 
